@@ -29,6 +29,12 @@
 
 	* scm/output-gnome.scm: More fontconfig comment.
 
+2004-11-05  Pedro Kroger  <kroeger@pedrokroeger.net>
+
+	* GNUmakefile.in ($(builddir)/share/lilypond-force): create the
+	<package> directory in $(builddir)/share according with
+	PACKAGE_NAME defined in the VERSION file.
+
 2004-11-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lily/beam.cc (rest_collision_callback): use local beam
